# hassil

./: .gitignore  CHANGELOG.md  CODEOWNERS  HassILGrammar.g4  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: ci.yaml  release-drafter.yml
examples/: en.yaml
hassil/: __init__.py  __main__.py  _resources.py  edit_distance.py  errors.py  expression.py  expression_listener.py  intents.py  models.py  parse.py  parse_expression.py  parser.py  recognize.py  sample.py  sample_template.py  string_matcher.py  trie.py  util.py
hassil/grammar/: HassILGrammar.interp  HassILGrammar.tokens  HassILGrammarLexer.interp  HassILGrammarLexer.py  HassILGrammarListener.py  HassILGrammarParser.py  HassILGrammarVisitor.py
script/: format  lint  package  run  setup  test
tests/: test_edit_distance.py  test_expression.py  test_expression_listener.py  test_intents.py  test_parser.py  test_recognize.py  test_sample.py  test_trie.py  test_util.py
